<resources>
    <string name="app_name">My Application</string>
    <string name="add_todo">할 일 추가하기</string>
    <string name="title">제목</string>
    <string name="hint_title">해야 할 일을 입력해주세요.</string>
    <string name="importance">중요도</string>
    <string name="importance_low">낮음</string>
    <string name="importance_middle"> 중간</string>
    <string name="importance_high">높음</string>
    <string name="completion">완료</string>

</resources>